# chalcogenide-perovskite-screening

./: 404.html  CITATION.cff  Makefile  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt
assets/figures/: pareto_CLS_sj.html  pareto_CLS_tandem.html  pareto_SR_tandem.html  plot_matrix_Eg_S.html  plot_matrix_Eg_Se.html  plot_matrix_prob_Se.html  tau_star_histogram.html
assets/figures/structures/: AlSnSe3_1.html  BaCeS3_1.html  BaHfS3_1.html  BaPrS3_1.html  CaUSe3_1.html  CeScS3_1.html  CeUS3_1.html  DyInS3_1.html  EuTmS3_1.html  EuYS3_1.html  GdScS3_1.html  LaTbS3_1.html  LaTbSe3_1.html  ScUS3_1.html  SmLuS3_1.html  SrUS3_1.html  TbScS3_1.html  UInS3_1.html  YbEuSe3_1.html  YbSmS3_1.html
chalcogenide_perovskite_screening/: __init__.py  config.py  dataset.py  features.py  plots.py
chalcogenide_perovskite_screening/modeling/: GCCN_Predict.py  predict.py  train.py
chalcogenide_perovskite_screening/synthesis_planning/: README.md  interfacial_pdplotter.py  materials_entries.py  reactions.py  settings.py  synthesis_pathways.py
data/interim/: tolerance_factor_classifiers.pkl
data/processed/: Perov_All.json.csv  crystal_sisso_hhi_sr.csv  final_CL_scores.csv  final_pipeline_evaluation_results.csv  prediction.csv  results_CrystaLLM_with_HHI.csv  results_CrystaLLM_with_bandgap.csv  results_SISSO_with_HHI.csv  results_SISSO_with_bandgap.csv  results_experimental_with_bandgap.csv  results_synthesis_prediction.csv  valid_new_compositions.csv
docs/: generate_interactive_figures.py  getting-started.md  index.md  interactive-figures.md  mkdocs.yml  pipeline.md  references.md
getting-started/: index.html
interactive-figures/: index.html
models/results/: 251219_Ch_weights - tolerance factors accuracy for several operations3-turnley.csv  processed_chpvk_test_dataset.csv  processed_chpvk_train_dataset.csv
notebooks/: 0_figures_paper.ipynb  1_get_SISSO_features.ipynb  2_CrystaLLM_analysis.ipynb  3_Experimental_likelihood.ipynb  5_HHI_calculation.ipynb
pipeline/: index.html
raw-data/: index.html
references/: index.html
search/: search_index.json
stylesheets/: extra.css
sustainability-data/: index.html
tf_chpvk_pv/: plots.py
(+121 files in other folders)
